# albafish

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.ru.md  pyproject.toml
albafish/: __init__.py  _base_router.py  async_decorators.py  async_fishing.py  constants.py  decorators.py  events.py  exceptions.py  fishing.py  items.py  protocol.py
data/: items.json
examples/: async_example.py  basic_monitor.py  decorator_router.py  filtered_catch.py
